2015-02-03  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Simplify BalsaMailboxConfView destruction

	* src/mailbox-conf.c (mailbox_conf_view_new_full): use g_free as
	a weak-ref-notify instead of a wrapper.

2015-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Simplify notebook-label destruction

	* src/main-window.c (bw_notebook_label_new): use
	g_signal_connect_object to handle destruction of label, instead
	of a weak-ref.

2015-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Close compose windows on exit

	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler),
	(sendmsg_window_new): weak-ref the main-window and close any
	compose window that is still open.

2015-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Prune some dead code

	* src/balsa-message.c (balsa_message_init), (balsa_message_new):
	close-with-msg is unused.
	* src/balsa-message.h: remove it, and its setter.
	* src/message-window.c (message_window_idle_handler),
	(mw_set_selected): setter has gone away.

2015-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Compose window may outlive main window

	* src/main-window.c (bw_send_msg_window_destroy_cb): check for
	NULL main-window.
	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler): ditto.

2015-01-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Possible fix for RedHat bug #1050738 (Geoff Leach)

	* src/balsa-index.c (bndx_compose_foreach): check for NULL
	compose window.

2015-01-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Possible fix for RedHat bug #831889 (Geoff Leach)

	* src/sendmsg-window.c (collect_for_quote): check for NULL root.

2015-01-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Possible fix for RedHat bug #1097953 (Geoff Leach)

	* src/main-window.c (balsa_window_class_init), (balsa_window_new),
	(bw_close_mailbox_on_timer): use balsa_window_real_close_mbnode
	to close the mailbox instead of directly removing the notebook page.
	* src/message-window.c (destroy_message_window),